src/pages/Blog/Blog.css
.homepage {
    background-color: var(--as-Magic-mint);
    /* display: flex; */
    /* flex-direction: row; */
}

.gallery {
    /* flex: 70%; */
    padding: 30px;
    width: calc(100vw - 380px);
    left: 300px;
    position: relative;
    /* width: 70%; */
    /* justify-content: flex-end; */
    /* align-items: flex-end; */
}

.sidebar {
    /* flex: 30%; */
    width: 300px;
    position: fixed;
}

